[package]
name = "hubcaps"
version = "0.4.9"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Github"
documentation = "https://softprops.github.io/hubcaps"
homepage = "https://github.com/softprops/hubcaps"
repository = "https://github.com/softprops/hubcaps"
keywords = ["hyper", "github"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/hubcaps" }
coveralls = { repository = "softprops/hubcaps" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
env_logger = "0.3"

[dependencies]
futures = "0.1.21"
hyper = "0.12.5"
log = "0.4"
url = "1.6"
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"
failure = "0.1.1"
tokio = "0.1.7"

[dependencies.hyper-tls]
optional = true
version = "0.3.0"

[features]
default = ["tls"]
tls = ["hyper-tls"]